crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__regression__394.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/regression/394.lox
---
success: true
exit_code: 0
----- stdout -----
<class B at [POINTER]>

----- stderr -----
